@@ -42,8 +42,6 @@ AM_CHECK_GNOME_PRINT
 
 AM_CHECK_PSLIB
 
-AM_CHECK_GKSU
-
 AC_HEADER_STDC
 
 AC_GCC_TRADITIONAL
