@@ -1,3 +1,7 @@
+2008-07-17  Jonathan Gonzalez V.  <zeus@gnu.org>
+
+	* configure.in: Removed check of libgksu.
+
 2008-06-13  Jonathan Gonzalez V.  <zeus@gnu.org>
 
 	* configure.in: Added the define DEBUG when --enable-debug option
